Attempt to fix right-alignment of main info img

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,10 @@
     border-radius: 25px;
 }
 
-img {
+.main-info img {
     border-radius: 100px;
+    margin-left: auto;
+    margin-right: 10px;
 }
 
 #header-links.flexbox-container {
@@ -41,6 +43,7 @@ img {
 
 .item-showcase {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    align-content: center;
 }
 
 .item.flexbox-container {
